--- a/tmux.conf
+++ b/tmux.conf
@@ -37,22 +37,21 @@ set -s escape-time 0
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
-set -g default-terminal screen-256color
+
 set -g status-keys vi
-set -g history-limit 10000
 
 # statusbar
 set -g status on
 set -g status-style 'bg=default'
 set -g status-position top
-set -g status-interval 1
-set -g status-justify centre
+set -g status-interval 10
 set -g status-keys vi
-set -g status-left "#[fg=green]#(whoami)@#h #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]"
+set -g status-left "#[fg=green]#(whoami)@#h • #[fg=green]#(uname -r | cut -c 1-6)#[default]"
 set -g status-left-length 140
-set -g status-left-style default
-set -g status-right "#[fg=white,bg=default] #(grep 'cpu ' /proc/stat | awk '{usage=($2+$4)*100/($2+$4+$5)} END {print usage \"%\"}') #(free -h | awk '/^Mem:/ {print $3 \"/\" $2}') | %A %l:%M:%S %p %d-%m-%Y"
 set -g status-right-length 140
+set -g status-justify centre
+set -g status-left-style default
+set -g status-right "%A %d/%m/%Y %l:%M %p"
 
 # tmux yank
 run-shell ~/.config/tmux/tmux-yank/yank.tmux
